/*
 * Copyright 2010-2019 James Pether Sörling
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *	$Id$
 *  $HeadURL$
*/
package com.hack23.cia.service.impl.action.common;

import com.hack23.cia.service.api.action.common.ServiceRequest;
import com.hack23.cia.service.api.action.common.ServiceResponse;

/**
 * The Interface BusinessService.
 *
 * @param <T>
 *            the generic type
 * @param <V>
 *            the value type
 */
public interface BusinessService<T extends ServiceRequest,V extends ServiceResponse> {

	/**
	 * Gets the supported service.
	 *
	 * @return the supported service
	 */
	Class<? extends ServiceRequest> getSupportedService();

	/**
	 * Process service.
	 *
	 * @param serviceRequest
	 *            the service request
	 * @return the v
	 */
	V processService(T serviceRequest);
}
